@@ -1,5 +1,6 @@
 v1.7.3 (20/07/2020)
 - bug fix: ignore large temporary files in get_gda_barcodes which lead to memory errors
+- removed obsolete PROASIS menu item
 
 v1.7.2 (16/07/2020)
 - show molprobity to-do list generated by buster-report in XCE COOT interface
